<resources>
    <!--    ================ GENERAL ================-->
    <string name="app_name" translatable="false">Real Estate Hub</string>
    <string name="default_web_client_id" translatable="false">63950315535-c6fg3l7cu7h4bbgr921i7poherailqul.apps.googleusercontent.com</string>


    <!--    ================ WELCOME ACTIVITY ================-->
    <string name="welcomeText">Welcome to Real Estate Hub!</string>
    <string name="welcomeInfoText">The best application to buy, sell and invest in real estate</string>
    <string name="startButtonText">Get Started!</string>


    <!--    ================ CONNECTING ACTIVITY ================-->
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="lets_you_in">Let\'s you in</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="continue_with">or continue with</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>


    <!-- ================ FORGOT PASSWORD ACTIVITY ================    -->
    <string name="forgot_password_main_text">Please enter your Email to receive\n a link to reset your password.</string>
    <string name="continue_">Continue</string>


    <!-- ================ SET INTENT ACTIVITY ================ -->
    <string name="set_intent_main_text">Please choose your purpose using Real Estate Hub</string>
    <string name="choose_multiple">You can choose multiple</string>
    <string name="seller">Seller</string>
    <string name="buyer">Buyer</string>
    <string name="set_interest">Set Your Interest</string>


    <!-- ================ SIGNUP ACTIVITY ================ -->
    <string name="fill_profile">Fill Your Profile</string>
    <string name="star_first_name">* First Name</string>
    <string name="star_last_name">* Last Name</string>
    <string name="star_email">* Email</string>
    <string name="star_password">* Password</string>
    <string name="star_confirm_password">* Confirm Password</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="fake_number">555 555 555</string>
    <string name="address">Address</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>


    <!--    ================ NAV DRAWER ================    -->
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="via_sms">via SMS</string>
    <string name="via_email">via Email</string>
    <string name="loading">Loading ..</string>


    <!-- ================ PROFILE FRAGMENT ================ -->
    <string name="profile">Profile</string>
    <string name="recently_viewed">Recently Viewed</string>
    <string name="recently_reached">Recently Reached</string>
    <string name="recently_searched">Recently Searched</string>
    <string name="payments">Payments</string>
    <string name="language">Language</string>
    <string name="english_us">English (US)</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>


    <!-- ================ ADD POST ACTIVITY ================ -->
    <string name="add_post">Add Post</string>
    <string name="rent">Rent</string>
    <string name="sell">Sell</string>


    <!-- ================ PROPERTY AD PLAN ACTIVITY ================ -->
    <string name="select_advertising_route">Select Your Advertising Route</string>
    <string name="free_ad_description">Tap the \'Free Ad\' button to post a free advertisement.</string>
    <string name="free_ad">Free Ad</string>
    <string name="paid_ad_description">If you would like your advertisement to\n show on top of \'Home Page\',\n click on the \'Paid Ad\' button.</string>
    <string name="paid_ad_description2">"Upgrade to our premium plan for just $49.99 and watch your post soar to the top as a sponsored listing for 30 days, gaining maximum visibility and reaching more potential buyers!</string>
    <string name="paid_ad">Paid Ad</string>


    <!-- ================ PROPERTY ADDRESS ACTIVITY ================ -->
    <string name="fill_property_address">Fill Your Property Address</string>
    <string name="post_name">Post Name</string>
    <string name="select_property_type">Select Property Type</string>
    <string name="select_view">Select view</string>
    <string name="property_location">What is the property location?</string>
    <string name="street">Street</string>
    <string name="floor_number">Floor Number</string>
    <string name="total_floors">Total floors in the building</string>
    <string name="no_home">No. Home</string>
    <!-- ================ PROPERTY INFORMATION ACTIVITY ================ -->
    <string name="fill_property_information">Fill Your Property Information</string>
    <string name="no_rooms">Number of rooms</string>
    <string name="no_showers">Select number of showers</string>
    <string name="no_parking">Select number of parking</string>
    <string name="no_balconies">Select number of balconies</string>
    <string name="property_characteristics">Property Characteristics</string>
    <string name="elevators">Elevators</string>
    <string name="conditioner">air conditioner</string>
    <string name="kosher_kitchen">Kosher kitchen</string>
    <string name="storage">Storage</string>
    <string name="water_heater">Water Heater</string>
    <string name="renovated">Renovated</string>
    <string name="access_for_disabled">Access for disabled</string>
    <string name="furniture">Furniture</string>
    <string name="what_important_about_property">What is important to you about the property?</string>


    <!-- ================ PROPERTY PHOTOS VIDEOS ACTIVITY ================ -->
    <string name="upload_property_pictures_videos">Upload Your Property Pictures/Videos</string>
    <string name="upload_photos">Upload Photos</string>
    <string name="upload_videos">Upload Videos</string>
    <string name="click_to_upload">Click here to upload photos</string>

    <!-- ================ PROPERTY PRICE AND SIZE ACTIVITY ================    -->
    <string name="size_square_meters">Total size in square meters</string>
    <string name="price">Price</string>
    <string name="entry_date">Entry Date</string>
    <string name="immediate">Immediate</string>
    <string name="flexible">Flexible</string>
    <string name="fill_property_payments">Fill Your Property Payments</string>


    <string-array name="property_types">
        <item>Apartment</item>
        <item>Building</item>
        <item>House</item>
        <item>Parking</item>
        <item>Roof/Penthouse</item>
        <item>Studio/Loft</item>
        <item>Storage</item>
        <item>General</item>
    </string-array>

    <string-array name="open_view">
        <item>With no</item>
        <item>To the sea</item>
        <item>To the park</item>
        <item>To the city</item>
    </string-array>

    <string-array name="shower_number">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4+</item>
    </string-array>

    <string-array name="number_of_parking_blaconies">
        <item>without</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="hello_blank_fragment">hello blank fragment</string>
    <string name="filter">Filter</string>
    <string name="options">Options</string>
    <string name="buy">Buy</string>
    <string name="property_types">Property types</string>
    <string name="apartment">Apartment</string>
    <string name="building">Building</string>
    <string name="house">House</string>
    <string name="parking">Parking</string>
    <string name="roof_penthouse">Roof/Penthouse</string>
    <string name="studio_loft">Studio/Loft</string>
    <string name="price_range">Price range</string>
    <string name="from">From -</string>
    <string name="to">To -</string>
    <string name="characteristics">Characteristics</string>
    <string name="reset">Reset</string>
    <string name="favorite">Favorite</string>
    <string name="delete_post">Delete Post</string>



    <string-array name="priceSlider">
        <item>1000</item>
        <item>100000000</item>
    </string-array>

    <!-- Checkout -->
    <string name="google_pay_status_unavailable">Unfortunately, Google Pay is not available on this device.</string>
    <string name="payments_show_name">Successfully received payment data for %s!</string>
    <string name="gateway_replace_name_example">"Gateway name set to \"example\" - please modify Constants.java and replace it with your own gateway."</string>
    <string name="checkout_item_description">Description</string>
    <string name="payment_details">30 Days Property Ad Plan</string>
    <string name="payment_price">$49.99</string>

</resources>