<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn.SignUpActivity"
    android:background="@color/back_ground_theme">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".LogIn.SignUpActivity">

        <LinearLayout
            android:id="@+id/firstLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/backButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/icon_back" />

            <TextView
                android:id="@+id/pageNametextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/mazzardsofth_regular"
                android:text="@string/fill_property_address"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/picButtonsLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/firstLinearLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp">
        </RelativeLayout>
        <!-- Main -->
        <LinearLayout
            android:id="@+id/mainLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/picButtonsLinearLayout"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/post_name">

                <EditText
                    android:id="@+id/postNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="emailAddress"
                    android:background="@drawable/background_for_text"
                    android:ems="10"
                    android:fontFamily="@font/mazzardsofth_regular"
                    android:inputType="textPersonName"
                    android:padding="12dp"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/background_for_text"
                >

                <TextView
                    android:id="@+id/propertyTypeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_property_type"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"/>

                <Spinner
                    android:id="@+id/propertyTypeSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="12dp"
                    android:gravity="center"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/background_for_text">
                <TextView
                    android:id="@+id/openViewTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_view"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"/>

                <Spinner
                    android:id="@+id/openViewSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="12dp"
                    android:gravity="center"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/property_location">

                <EditText
                    android:id="@+id/propertyLocationEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="emailAddress"
                    android:background="@drawable/background_for_text"
                    android:ems="10"
                    android:fontFamily="@font/mazzardsofth_regular"
                    android:inputType="text"
                    android:padding="12dp"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/street">

                <AutoCompleteTextView
                    android:id="@+id/streetNameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:textSize="14sp"
                    android:background="@drawable/background_for_text"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/floor_number">

                <EditText
                    android:id="@+id/propertyFloorEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="emailAddress"
                    android:background="@drawable/background_for_text"
                    android:ems="10"
                    android:fontFamily="@font/mazzardsofth_regular"
                    android:inputType="number"
                    android:padding="12dp"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/total_floors">

                <EditText
                    android:id="@+id/totalFloorsEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="emailAddress"
                    android:background="@drawable/background_for_text"
                    android:ems="10"
                    android:fontFamily="@font/mazzardsofth_regular"
                    android:inputType="number"
                    android:padding="12dp"
                    android:textSize="14sp"
                    android:textStyle="bold"
                   />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/no_home">

                    <EditText
                        android:id="@+id/homeNumberEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="emailAddress"
                        android:background="@drawable/background_for_text"
                        android:ems="10"
                        android:fontFamily="@font/mazzardsofth_regular"
                        android:inputType="number"
                        android:padding="12dp"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/continueButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/welcome_button"
                android:fontFamily="@font/mazzardsofth_regular"
                android:padding="10dp"
                android:text="@string/continue_"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>