<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_ground_theme"
    tools:context=".HomeFragments.UploadPost.PropertyAddPhotosVideos">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".LogIn.SignUpActivity">

        <LinearLayout
            android:id="@+id/firstLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/backButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/icon_back" />

            <TextView
                android:id="@+id/pageNametextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/mazzardsofth_regular"
                android:text="@string/upload_property_pictures_videos"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />


        </LinearLayout>

        <RelativeLayout
            android:id="@+id/picLinearLayout"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_below="@+id/firstLinearLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp">


            <ImageView
                android:id="@+id/postImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/house" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mazzardsofth_regular"
                android:text="@string/click_to_upload"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="12sp"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/picButtonsLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/picLinearLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/uploadPhotosButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background_for_text"
                android:ems="10"
                android:fontFamily="@font/mazzardsofth_regular"
                android:onClick="onUploadPhotosClick"
                android:padding="12dp"
                android:text="@string/upload_photos"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/uploadVideosButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/uploadPhotosButton"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background_for_text"
                android:ems="10"
                android:fontFamily="@font/mazzardsofth_regular"
                android:onClick="onUploadVideosClick"
                android:padding="12dp"
                android:text="@string/upload_videos"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RelativeLayout>
        <!-- Main -->
        <LinearLayout
            android:id="@+id/otherDetailsLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/picButtonsLinearLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:padding="10dp">

            <Button
                android:id="@+id/continueButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/background_filled_frame_blue"
                android:fontFamily="@font/mazzardsofth_regular"
                android:text="@string/continue_"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>
