<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    tools:context=".WelcomeActivity">

    <ImageView
        android:id="@+id/welcome_popup_ImageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="70dp"
        app:srcCompat="@drawable/welcome_popup" />

    <ImageView
        android:id="@+id/welcome_finish_ImageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="70dp"
        android:visibility="invisible"
        app:srcCompat="@drawable/welcome_finish" />

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_finish_ImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:fontFamily="@font/opensans_regular"
        android:gravity="center"
        android:text="@string/welcomeText"
        android:textColor="@color/blue"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/welcomeInfoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcomeTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/opensans_regular"
        android:gravity="center"
        android:text="@string/welcomeInfoText"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/welcomeButton"
        android:background="@drawable/welcome_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcomeInfoTextView"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="18sp"
        android:padding="10dp"
        android:fontFamily="@font/opensans_regular"
        android:textStyle="bold"
        android:text="@string/startButtonText"
        android:textColor="@color/white"
    />


</RelativeLayout>